--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -27,8 +28,18 @@
           </ul>
           <address class="address">
             <ul class="address__list" >
-            <li class="address__list-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="address__list-item"><a href="tel:+380961111111">+380961111111</a></li>
+            <li class="address__list-item"><a href="mailto:info@devstudio.com">
+                <svg class="icon" width="16" height="12">
+                <use href="./img/symbol-defs.svg#icon-envelope">
+                </use>
+              </svg>
+              info@devstudio.com</a></li>
+            <li class="address__list-item"><a href="tel:+380961111111">
+               <svg class="icon" width="10" height="16">
+              <use href="./img/symbol-defs.svg#icon-smartphone">
+              </use>
+            </svg>
+              +380961111111</a></li>
             </ul>
           </address>
         </nav>
@@ -44,6 +55,11 @@
           <div class="container">
           <ul class="what-we-do__list">
             <li>
+          <div class="icon-container">
+            <svg class="icon" width="70" height="70">
+              <use href="./img/symbol-defs.svg#icon-antenna"></use>
+            </svg>
+          </div>
               <h3  class="what-we-do__subtitle">Внимание к деталям</h3>
               <p  class="what-we-do__text">
                 Идейные соображения, а также начало повседневной работы по
@@ -51,6 +67,11 @@
               </p>
             </li>
             <li>
+              <div class="icon-container">
+            <svg class="icon" width="70" height="70">
+              <use href="./img/symbol-defs.svg#icon-clock"></use>
+            </svg>
+              </div>
               <h3 class="what-we-do__subtitle">Пунктуальность</h3>
               <p class="what-we-do__text">
                 Задача организации, в особенности же рамки и место обучения
@@ -58,6 +79,11 @@
               </p>
             </li>
             <li>
+                <div class="icon-container">
+            <svg class="icon" width="70" height="70">
+              <use href="./img/symbol-defs.svg#icon-diagram"></use>
+            </svg>
+               </div>
               <h3 class="what-we-do__subtitle">Планирование</h3>
               <p class="what-we-do__text">
                 Равным образом консультация с широким активом в значительной
@@ -65,6 +91,11 @@
               </p>
             </li>
             <li>
+               <div class="icon-container">
+            <svg class="icon" width="70" height="70">
+              <use href="./img/symbol-defs.svg#icon-astronaut"></use>
+            </svg>
+          </div>
               <h3 class="what-we-do__subtitle">Современные технологии</h3>
               <p class="what-we-do__text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -114,16 +145,19 @@
             </div>
           </li>
           </ul>
+        </div>
         </section>
       </main>
       <footer class="footer">
         <div class="container">
-        <a class="logo" href="#">Web<span class="logo-span-footer">Studio</span></a>
-        <address class="footer__address">г. Киев, пр-т Леси Украинки, 26</address>
+        <a class="logo logo-footer" href="#">Web<span class="logo-span-footer">Studio</span></a>
+        <address >
+          <a class="footer__address" target="_blank" href="https://goo.gl/maps/u5AVHtxzXWnErXXr5"> г. Киев, пр-т Леси Украинки, 26  </a>
         <ul>
           <li ><a  class="footer__contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li ><a class="footer__contact" href="tel:+380961111111">+380961111111</a></li>
         </ul>
+      </address>
        </div>
       </footer>
     
