--- a/index.html
+++ b/index.html
@@ -1,169 +1,231 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebStudio</title>
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WebStudio</title>
-  <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="./css/index.css" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet" />
-</head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <nav class="navigation">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-span">Studio</span></a
+          >
 
-<body>
-
-  <header class="header">
-    <div class="container">
-      <nav class="navigation">
-        <a class="logo" href="./index.html">Web<span class="logo-span">Studio</span></a>
-
-        <ul class="navigation__list">
-          <li class="navigation__list-item"><a href="">Студия</a></li>
-          <li class="navigation__list-item"><a href="./portfolio.html">Портфолио</a></li>
-          <li class="navigation__list-item"><a href=""> Контакты</a></li>
-        </ul>
-        <address class="address">
-          <ul class="address__list">
-            <li class="address__list-item"><a href="mailto:info@devstudio.com">
-                <svg class="icon" width="16" height="12">
-                  <use href="./img/symbol-defs.svg#icon-envelope">
-                  </use>
+          <ul class="navigation__list">
+            <li class="navigation__list-item"><a href="">Студия</a></li>
+            <li class="navigation__list-item">
+              <a href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="navigation__list-item"><a href=""> Контакты</a></li>
+          </ul>
+          <address class="address">
+            <ul class="address__list">
+              <li class="address__list-item">
+                <a href="mailto:info@devstudio.com">
+                  <svg class="icon" width="16" height="12">
+                    <use href="./img/symbol-defs.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com</a
+                >
+              </li>
+              <li class="address__list-item">
+                <a href="tel:+380961111111">
+                  <svg class="icon" width="10" height="16">
+                    <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+                  </svg>
+                  +380961111111</a
+                >
+              </li>
+            </ul>
+          </address>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="section-business">
+        <div class="container">
+          <h1 class="business__title">
+            Эффективные решения для вашого бизнеса
+          </h1>
+          <button type="button" class="business__btn">Заказать услугу</button>
+        </div>
+      </section>
+      <section class="section-what-we-do">
+        <div class="container">
+          <ul class="what-we-do__list">
+            <li>
+              <div class="icon-container">
+                <svg class="icon" width="70" height="70">
+                  <use href="./img/symbol-defs.svg#icon-antenna"></use>
                 </svg>
-                info@devstudio.com</a></li>
-            <li class="address__list-item"><a href="tel:+380961111111">
-                <svg class="icon" width="10" height="16">
-                  <use href="./img/symbol-defs.svg#icon-smartphone">
-                  </use>
+              </div>
+              <h3 class="what-we-do__subtitle">Внимание к деталям</h3>
+              <p class="what-we-do__text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li>
+              <div class="icon-container">
+                <svg class="icon" width="70" height="70">
+                  <use href="./img/symbol-defs.svg#icon-clock"></use>
                 </svg>
-                +380961111111</a></li>
+              </div>
+              <h3 class="what-we-do__subtitle">Пунктуальность</h3>
+              <p class="what-we-do__text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <div class="icon-container">
+                <svg class="icon" width="70" height="70">
+                  <use href="./img/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
+              <h3 class="what-we-do__subtitle">Планирование</h3>
+              <p class="what-we-do__text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <div class="icon-container">
+                <svg class="icon" width="70" height="70">
+                  <use href="./img/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+              <h3 class="what-we-do__subtitle">Современные технологии</h3>
+              <p class="what-we-do__text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+          <h2 class="what-we-do__title">Чем мы занимаемся</h2>
+          <ul class="what-we-do__list-img">
+            <li class="what-we-do__list-img-item">
+              <img
+                src="./img/imgkeyboard.png"
+                alt="keyboard"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="what-we-do__list-img-item">
+              <img
+                src="./img/imgtablet.png"
+                alt="tablet"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="what-w-edo__list-img-item">
+              <img
+                src="./img/imgdesktop.png"
+                alt="deskstop"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section-our-team">
+        <div class="container">
+          <h2 class="what-we-do__title">Наша Команда</h2>
+          <ul class="section-our-team__list">
+            <li>
+              <div class="wrapper-img">
+                <img
+                  class="our-team__img"
+                  src="./img/imgmeninglasses.jpg"
+                  alt="meninglasses.jpg"
+                />
+                <p class="our-team__title">Игорь Демьяненко</p>
+                <span class="our-team__subtitle">Product Designer</span>
+              </div>
+            </li>
+            <li>
+              <div class="wrapper-img">
+                <img
+                  class="our-team__img"
+                  src="./img/imgwomaningglasses.jpg"
+                  alt="womaningglasses.jpg"
+                  width="270"
+                  height="260"
+                />
+                <p class="our-team__title">Игорь Демьяненко</p>
+                <span class="our-team__subtitle">Product Designer</span>
+              </div>
+            </li>
+            <li>
+              <div class="wrapper-img">
+                <img
+                  class="our-team__img"
+                  src="./img/imgmeninshirt.jpg"
+                  alt="meninshirt.jpg"
+                  width="270"
+                  height="260"
+                />
+                <p class="our-team__title">Игорь Демьяненко</p>
+                <span class="our-team__subtitle">Product Designer</span>
+              </div>
+            </li>
+            <li>
+              <div class="wrapper-img">
+                <img
+                  class="our-team__img"
+                  src="./img/imgmenint-shirt.jpg"
+                  alt="menint-shirt"
+                  width="270"
+                  height="260"
+                />
+                <p class="our-team__title">Игорь Демьяненко</p>
+                <span class="our-team__subtitle">Product Designer</span>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <a class="logo logo-footer" href="#"
+          >Web<span class="logo-span-footer">Studio</span></a
+        >
+        <address>
+          <a
+            class="footer__address"
+            target="_blank"
+            href="https://goo.gl/maps/u5AVHtxzXWnErXXr5"
+          >
+            г. Киев, пр-т Леси Украинки, 26
+          </a>
+          <ul>
+            <li>
+              <a class="footer__contact" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="footer__contact" href="tel:+380961111111"
+                >+380961111111</a
+              >
+            </li>
           </ul>
         </address>
-      </nav>
-    </div>
-  </header>
-  <main>
-    <section class="section-business">
-      <div class="container">
-        <h1 class="business__title">Эффективные решения для вашого бизнеса</h1>
-        <button type="button" class="business__btn">Заказать услугу</button>
-    </section>
-    <section class="section-what-we-do">
-      <div class="container">
-        <ul class="what-we-do__list">
-          <li>
-            <div class="icon-container">
-              <svg class="icon" width="70" height="70">
-                <use href="./img/symbol-defs.svg#icon-antenna"></use>
-              </svg>
-            </div>
-            <h3 class="what-we-do__subtitle">Внимание к деталям</h3>
-            <p class="what-we-do__text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <div class="icon-container">
-              <svg class="icon" width="70" height="70">
-                <use href="./img/symbol-defs.svg#icon-clock"></use>
-              </svg>
-            </div>
-            <h3 class="what-we-do__subtitle">Пунктуальность</h3>
-            <p class="what-we-do__text">
-              Задача организации, в особенности же рамки и место обучения
-              кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <div class="icon-container">
-              <svg class="icon" width="70" height="70">
-                <use href="./img/symbol-defs.svg#icon-diagram"></use>
-              </svg>
-            </div>
-            <h3 class="what-we-do__subtitle">Планирование</h3>
-            <p class="what-we-do__text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <div class="icon-container">
-              <svg class="icon" width="70" height="70">
-                <use href="./img/symbol-defs.svg#icon-astronaut"></use>
-              </svg>
-            </div>
-            <h3 class="what-we-do__subtitle">Современные технологии</h3>
-            <p class="what-we-do__text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
-        <h2 class="what-we-do__title">Чем мы занимаемся</h2>
-        <ul class="what-we-do__list-img">
-          <li class="what-we-do__list-img-item"><img src="./img/imgkeyboard.png" alt="keyboard" width="370"
-              height="294" /></li>
-          <li class="what-we-do__list-img-item"><img src="./img/imgtablet.png" alt="tablet" width="370" height="294" />
-          </li>
-          <li class="what-w-edo__list-img-item"><img src="./img/imgdesktop.png" alt="deskstop" width="370"
-              height="294" /></li>
-        </ul>
       </div>
-
-    </section>
-    <section class="section-our-team">
-      <div class="container">
-        <h2 class="what-we-do__title">Наша Команда</h2>
-        <ul class="section-our-team__list">
-          <li>
-            <div class="wrapper-img">
-              <img class="our-team__img" src="./img/imgmeninglasses.jpg" alt="meninglasses.jpg" />
-              <p class="our-team__title">Игорь Демьяненко</p>
-              <span class="our-team__subtitle">Product Designer</span>
-            </div>
-          </li>
-          <li>
-            <div class="wrapper-img">
-              <img class="our-team__img" src="./img/imgwomaningglasses.jpg" alt="womaningglasses.jpg" width="270"
-                height="260" />
-              <p class="our-team__title">Игорь Демьяненко</p>
-              <span class="our-team__subtitle">Product Designer</span>
-            </div>
-          </li>
-          <li>
-            <div class="wrapper-img"><img class="our-team__img" src="./img/imgmeninshirt.jpg" alt="meninshirt.jpg"
-                width="270" height="260" />
-              <p class="our-team__title">Игорь Демьяненко</p>
-              <span class="our-team__subtitle">Product Designer</span>
-            </div>
-          </li>
-          <li>
-            <div class="wrapper-img">
-              <img class="our-team__img" src="./img/imgmenint-shirt.jpg" alt="menint-shirt" width="270" height="260" />
-              <p class="our-team__title">Игорь Демьяненко</p>
-              <span class="our-team__subtitle">Product Designer</span>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </section>
-  </main>
-  <footer class="footer">
-    <div class="container">
-      <a class="logo logo-footer" href="#">Web<span class="logo-span-footer">Studio</span></a>
-      <address>
-        <a class="footer__address" target="_blank" href="https://goo.gl/maps/u5AVHtxzXWnErXXr5"> г. Киев, пр-т Леси
-          Украинки, 26 </a>
-        <ul>
-          <li><a class="footer__contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="footer__contact" href="tel:+380961111111">+380961111111</a></li>
-        </ul>
-      </address>
-    </div>
-  </footer>
-
-</body>
-
+    </footer>
+  </body>
 </html>
